test/subjects/errors/break_more_than_allowed1.php
<?php

	break 3; // { Error: Cannot break/continue 3 levels }

?>
